# CSCI261F18

A8/: CMakeLists.txt  main.cpp
Assignments/A1/: CMakeLists.txt
Assignments/A2/: CMakeLists.txt
Assignments/Exam2A/: CMakeLists.txt  main.cpp
Assignments/Exam2G/: CMakeLists.txt  main.cpp
Assignments/L1A/: CMakeLists.txt  main.cpp
Assignments/L1B/: CMakeLists.txt
Assignments/L1C/: CMakeLists.txt  main.cpp
Assignments/L2A/: CMakeLists.txt
Assignments/L2B/: CMakeLists.txt
Assignments/L2C/: CMakeLists.txt
Assignments/L2D/: CMakeLists.txt
Assignments/L2E/: CMakeLists.txt  main.cpp
Assignments/L3A/: CMakeLists.txt  main.cpp
Assignments/L3B/: CMakeLists.txt
Assignments/L3C/: CMakeLists.txt
Assignments/L5A/: CMakeLists.txt  main.cpp
Assignments/L6A/: CMakeLists.txt  main.cpp
Assignments/L7A/: CMakeLists.txt  Functions.cpp  Functions.h  main.cpp
Assignments/L7B/: CMakeLists.txt
Assignments/RPSLS/: Functions.h
Assignments/RPSLS copy/: CMakeLists.txt  Functions.cpp  main.cpp
Assignments/testfile/: CMakeLists.txt  main.cpp
FP/: Budget.cpp  Budget.h  CMakeLists.txt  Categories.cpp  Categories.h  Transaction.h  final.txt  main.cpp
Set1/A1/: main.cpp
Set1/L1B/: main.cpp
Set7/A7/: CMakeLists.txt  Functions.cpp  Functions.h  WordCount.h  main.cpp
Set7/L7C/: CMakeLists.txt  main.cpp
Set8/A8/: AlienInvasionPaigeCirillo.cpp  AlienInvasionPaigeCirillo.h  CMakeLists.txt  CherryDatTruong.cpp  CherryDatTruong.h  MagicDundieCarolineArndt.cpp  MagicDundieCarolineArndt.h  MagicNumberSydneyToler.cpp  MagicNumberSydneyToler.h  main.cpp
(+60 files in other folders)
