cmake_minimum_required(VERSION 3.12)
project(A8)

set(CMAKE_CXX_STANDARD 11)

add_executable(A8 main.cpp MagicDundieCarolineArndt.cpp MagicDundieCarolineArndt.h MagicNumberSydneyToler.cpp MagicNumberSydneyToler.h CherryDatTruong.cpp CherryDatTruong.h AlienInvasionPaigeCirillo.cpp AlienInvasionPaigeCirillo.h)